# skbtools

./: .gitignore  .pre-commit-config.yaml  3D_Ship_plot.py  ECCO_Bermuda_SVP.py  ECCO_ESV_Table.py  ECCO_Plots.py  ESV_table.py  GNSS_Distribution_Plot.py  GPSResidual.py  GPS_Grid.py  README.md  Ray_Tracing.py  Ray_Tracing_Iter_Locate.py  RigidBodyMovementProblem.py  RodriguesTest.py  SVP_Calculations.py  TranducerLocaterComparison.py  __init__.py  barycenter_distance.py  findPointByPlane.py  fitPlane.py  geigerMethodTest.py  parseGPSData.py  plotPlane.py  printTable.py  projectToPlane.py  pyproject.toml  rayz.py  rodriguesRotationMatrix.py  synchronizeGPSData.py  transducer_pos.mat
ECCO_and_plotting/: 3D_Ship_plot.py  ECCO_Bermuda_SVP.py  ECCO_ESV_Table.py  ECCO_Plots.py  plotPlane.py  printTable.py
GPSData/: Aligned_Synthetic.mat  Realistic_CDOG_loc_noise_subint_new.mat  Realistic_CDOG_noise_subint_new.mat  Realistic_GPS_noise_subint_new.mat  Realistic_transponder_noise_subint_new.mat  Synthetic_CDOG.mat  Synthetic_CDOG_noise.mat  Synthetic_CDOG_noise_5253.mat  Synthetic_CDOG_noise_subint.mat  Synthetic_CDOG_noise_subint_new.mat  Synthetic_transponder.mat  Synthetic_transponder_noise.mat  Synthetic_transponder_noise_5253.mat  Synthetic_transponder_noise_subint.mat  Synthetic_transponder_noise_subint_new.mat  global_table_esv_ECCO_April.mat  global_table_esv_ECCO_August.mat  global_table_esv_ECCO_December.mat  global_table_esv_ECCO_February.mat  global_table_esv_ECCO_January.mat  global_table_esv_ECCO_July.mat  global_table_esv_ECCO_June.mat  global_table_esv_ECCO_March.mat  global_table_esv_ECCO_May.mat  global_table_esv_ECCO_November.mat  global_table_esv_ECCO_October.mat  global_table_esv_ECCO_September.mat  global_table_esv_mine.mat  global_table_esv_normal.mat  global_table_esv_perturbed.mat  global_table_esv_realistic_perturbed.mat  network-monitoring.csv  transducer_pos.mat
GeigerMethod/: Bermuda_Data_Analyze.py  Bermuda_Data_Parse.py  GPS_Lever_Arms.py  advancedGeigerMethod.py  experimentPathPlot.py  forwardModelPlot.py  forwardModelPlotAdvanced.py  geigerMethodTest.py  geigerMethod_Bermuda.py  geigerTimePlot.py  simulatedAnnealing.py  simulatedAnnealing_Bermuda.py  timePlot_Bermuda.py
Paper_Data/: Processed_GPS_Receivers_DOG_3_sample.npz  README.md
(+334 files in other folders)
