[project]
name = "skbtools"
version = "0.1.0"
authors = [
    { name = "Stefan Kildal-Brandt", email = "sk8609@princeton.edu" }
]
requires-python = ">=3.8"
dependencies = [
    "numpy",
    "matplotlib",
    "scipy",
    "pandas",
    "numba>=0.57",
    "pymap3d",
]

[project.optional-dependencies]
test = [
    "pytest",
    "pytest-cov",
]
dev = [
    "pre-commit",
    "ruff",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["GeigerMethod"]
include = ["*.py"]

[tool.ruff.lint]
select = ["E", "F", "B"]
