[project]
name = "skbtools"
version = "0.1.0"
authors = [
    { name = "Stefan Kildal-Brandt", email = "sk8609@princeton.edu" }
]
requires-python = ">=3.8"
dependencies = [
    "numpy>=1.24",
    "matplotlib>=3.5",
    "scipy>=1.10",
    "pandas>=1.5",
    "numba>=0.57",
    "pymap3d>=2.9",
]

[project.optional-dependencies]
test = [
    "pytest>=7.0",
    "pytest-cov>=4.0",
]
dev = [
    "pre-commit>=3.0",
    "ruff>=0.4",
]
[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["skbtools"]
include = ["*.py"]

[tool.black]
line-length = 88

[tool.ruff]
line-length = 88

[tool.ruff.lint]
select = ["E", "F", "B"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
docstring-code-format = true

[tool.uv.sources]
skbtools = { workspace = true }
